All tasks can be run in one task.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-imagemin": "^4.1.0"
+    "gulp-imagemin": "^4.1.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.1"
   },
   "dependencies": {}
 }
