--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.1"
